--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,64 @@
  /* grid padre */
 .grid-row-productos{
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
     margin: 50px;
     background-color: aquamarine;
 }
+/* -------------------------------------- */
+.grid-column-productos{
+    display: flex;
+    /* grid-template-columns: 1fr, 3fr; */
+    background-color: rgb(224, 228, 227);
+}
+/* ----------------------------------- */
+.grid-column-detalle{
+    background-color: rgb(255, 255, 255);
+    padding: 30px 50px;
+}
 
+.nombre-producto > h1{
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.precio > p{
+margin: 30px 0;
+ font-size: 20px;
+ font-weight: 900;
+}
+
+.tallas > p{
+    margin: 30px 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.lista-tallas{
+    display: flex;
+    list-style: none;
+}
+
+.lista-tallas > li{
+    margin: 0 10px;
+    font-size: 20px;
+}
+
+.btn1,
+.btn2{
+    width: 80%;
+    height: 50px;
+    margin: 5px 0;
+    font-size: 20px;
+    font-weight: 900;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.btn1{
+    background-color: rgb(0, 0, 0);
+}
+.btn2{
+    background-color: rgb(13, 104, 223);
+}
