--- a/style/style.css
+++ b/style/style.css
@@ -131,6 +131,7 @@ margin: 30px 0;
 
 /* Pie de pagina */
 .pie-pagina {
+    position:relative;
     width: 1366px;
     height: 320px;
     left: 0px;
@@ -138,10 +139,26 @@ margin: 30px 0;
     background-color: black;
 }
 
-.pie-pagina img {
+.pie-pagina .img1 {
     margin-left:523px;
     margin-top:64px;
     width: 246px;
     height: 80px;
 
 }
+
+.pie-pagina .img2 {
+    position: absolute;
+    left: 629px;
+    top: 216px;
+
+}
+.pie-pagina .img3 {
+    position: absolute;
+    left: 718px;
+    top: 216px;
+
+}
+
+
+
