--- a/style/style.css
+++ b/style/style.css
@@ -132,7 +132,7 @@ margin: 30px 0;
 /* Pie de pagina */
 .pie-pagina {
     position:relative;
-    width: 1366px;
+    width: 100%;
     height: 320px;
     left: 0px;
     bottom:0px;
