--- a/style/style.css
+++ b/style/style.css
@@ -161,9 +161,14 @@ margin: 30px 0;
 }
 
 .banner-will {
-    width:100vw;
     margin-bottom:64px;
+    width:100%;
+}
+
+.banner-will > img{
+    width: 100%;
     height:806px;
+    object-fit: cover;
 }
 
 .circulo {
