--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,11 @@
     margin: 0;
     padding: 0;
 }
+
+footer{
+    position: absolute;
+    bottom: 0px;
+}
 /* grid vista producto-------------------------------------------------------------------------------------------------------------------------- */
 
  /* grid padre */
@@ -183,5 +188,8 @@ margin: 30px 0;
    
 }
 
+/* carrito ------------------------------- */
 
-
+#contenedor-carrito{
+    background-color: rgb(131, 127, 127);
+}
