--- a/style/hover.css
+++ b/style/hover.css
@@ -6,3 +6,8 @@
     border: 2px solid #000;
     cursor: pointer;
 }
+
+.grid-column-producto:hover{
+    border: 2px solid #000;
+    cursor: pointer;
+}
